# info-getter

./: AGENTS.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: domain.hpp  http_api.hpp  json_codec.hpp  repository.hpp  service.hpp  sqlite_repository.hpp  time_utils.hpp
src/: http_api.cpp  json_codec.cpp  main.cpp  service.cpp  sqlite_repository.cpp  time_utils.cpp
tests/: integration_tests.cpp  unit_tests.cpp
